[workspace.dependencies]

bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"

thiserror = "1.0.37"

log = "0.4"
env_logger = "0.10.0"

parking_lot = "0.12.1"

fea-rs = "= 0.3.3"
font-types = { version = "0.1.6", features = ["serde"] }
read-fonts = "0.2.0"
write-fonts = "0.3.4"
skrifa = "0.1.0"

bitflags = "2.0"
chrono = "0.4.24"
filetime = "0.2.18"
indexmap = "1.9.2"
kurbo = { version = "0.9.4", features = ["serde"] }
ordered-float = { version = "3.4.0", features = ["serde"] }
smol_str = { version = "0.1.24", features = ["serde"] }
quick-xml = { version = "0.28.0", features = ["serialize"] }
regex = "1.7.1"

# dev dependencies
diff = "0.1.12"
ansi_term = "0.12.1"
tempfile = "3.3.0"
more-asserts = "0.3.1"
pretty_assertions = "1.3.0"
temp-env = "0.3.3"

[workspace]

members = [
    "fontdrasil",
    "fontbe",
    "fontir",
    "glyphs-reader",
    "glyphs2fontir",
    "ufo2fontir",
    "fontc",    
]
