[workspace.dependencies]

# external deps
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
bitflags = "2.0"
chrono = { version = "0.4.24", features = ["serde"] }
filetime = "0.2.18"
indexmap = "2.0"
kurbo = { version = "0.10.2", features = ["serde"] }
ordered-float = { version = "4.1.0", features = ["serde"] }
smol_str = { version = "0.2.0", features = ["serde"] }
regex = "1.7.1"
thiserror = "1.0.37"
log = "0.4"
env_logger = "0.10.0"
parking_lot = "0.12.1"
clap = { version = "4.0.32", features = ["derive"] }
rayon = "1.6"

# fontations etc
font-types = { version = "0.4.0", features = ["serde"] }
read-fonts = "0.12.0"
write-fonts = { version = "0.17.0", features = ["serde", "read"] }
skrifa = "0.11.0"
norad = "0.12"

# dev dependencies
diff = "0.1.12"
ansi_term = "0.12.1"
tempfile = "3.3.0"
more-asserts = "0.3.1"
pretty_assertions = "1.3.0"
temp-env = "0.3.3"

[workspace]

resolver = "2"

members = [
    "fontdrasil",
    "fontbe",
    "fontir",
    "glyphs-reader",
    "glyphs2fontir",
    "ufo2fontir",
    "fontc",
    "fea-rs",
    "fea-lsp",
]

[patch.crates-io]
fea-rs = { git = "https://github.com/cmyr/fea-rs.git", branch = "public-feature-builder-api" }
