[workspace.dependencies]

# external deps
bincode = "1.3.3"
serde = {version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9.14"
serde_json = "1.0.113"
bitflags = "2.0"
chrono = { version = "0.4.24", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }
kurbo = { version = "0.12.0", features = ["serde"] }
ordered-float = { version = "4.1.0", features = ["serde"] }
smol_str = { version = "0.2.0", features = ["serde"] }
regex = "1.7.1"
thiserror = "1.0.37"
log = "0.4"
env_logger = "0.11.0"
parking_lot = "0.12.1"
clap = { version = "4.0.32", features = ["derive"] }
rayon = "1.6"
icu_properties = "2.0"

# fontations etc
write-fonts = { version = "0.43.0", features = ["serde", "read"] }
skrifa = "0.37.0"
norad = { version = "0.16.0", default-features = false }

# dev dependencies
diff = "0.1.12"
tempfile = "3.3.0"
more-asserts = "0.3.1"
pretty_assertions = "1.3.0"
temp-env = "0.3.3"
rstest = "0.18.2"

[workspace]
resolver = "2"

members = [
    "fontdrasil",
    "fontbe",
    "fontir",
    "glyphs-reader",
    "glyphs-reader/ascii_plist_derive",
    "glyphs2fontir",
    "fontra2fontir",
    "ufo2fontir",
    "fontc",
    "fea-rs",
    "fea-lsp",
    "otl-normalizer",
    "fontc_crater",
]

[patch.crates-io]
tidy-sys = { version = "0.8.2", git = "https://github.com/cmyr/tidy-sys.git", branch = "cmake-hotfix" }
