[package]
name = "fea-lsp"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
fea-rs = {version = "0", path = "../fea-rs"}
lspower = "1.1.0"
tokio = { version = "1.3", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.9"
