[package]
name = "fea-rs"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
description = "Tools for working with Adobe OpenType Feature files."
repository = "https://github.com/cmyr/fea-rs"
categories = ["parsing", "text-processing"]
keywords = ["fonts", "opentype"]
readme = "README.md"
edition = "2018"
default-run = "parse_test"
exclude = ["test-data"]

[dependencies]
ansi_term = "0.12.1"
smol_str = "0.1.18"
norad = "0.5" # just for use in sample binaries/debugging, remove eventually
write-fonts = { git = "https://github.com/googlefonts/fontations", rev = "cff792e"}
#write-fonts = { version = "0.0.3", path = "../../fontations/write-fonts" }
xflags = "0.2.3"
chrono = "0.4.3"
diff = { version = "0.1.12", optional = true }
rayon = { version = "1.5", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_json = {version = "1.0.87", optional = true }

[features]
test = ["diff", "rayon", "serde", "serde_json"]

[dev-dependencies]
diff = "0.1.12"
rayon = "1.5"
criterion = "0.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[[bench]]
name = "parsing"
harness = false

[[bin]]
name = "fea-rs"
path = "src/bin/compile.rs"

# this is an example so it can use dev-dependencies
[[bin]]
name = "ttx_test"
required-features = ["test"]
