[package]
name = "fea-rs"
version = "0.10.0"
license = "MIT/Apache-2.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
description = "Tools for working with Adobe OpenType Feature files."
repository = "https://github.com/cmyr/fea-rs"
categories = ["parsing", "text-processing"]
keywords = ["fonts", "opentype"]
readme = "../README.md"
edition = "2021"
default-run = "fea-rs"
exclude = ["test-data"]

[dependencies]
ansi_term = "0.12.1"
smol_str = "0.2.0"
norad = "0.10" # Used in the compile binary
write-fonts = "0.12.0"
chrono = "0.4.3"
diff = { version = "0.1.12", optional = true }
rayon = { version = "1.6", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_json = {version = "1.0.87", optional = true }
thiserror = "1.0.37"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
indexmap = "2.0"

[features]
test = ["diff", "rayon", "serde", "serde_json"]

[dev-dependencies]
diff = "0.1.12"
rayon = "1.5"
criterion = "0.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[[bench]]
name = "parsing"
harness = false

[[bin]]
name = "fea-rs"
path = "src/bin/compile.rs"

# this is an example so it can use dev-dependencies
[[bin]]
name = "ttx_test"
required-features = ["test"]
