[package]
name = "fea-rs"
version = "0.18.0"
license = "MIT/Apache-2.0"
authors = ["Colin Rofls <colin@cmyr.net>"]
description = "Tools for working with Adobe OpenType Feature files."
repository = "https://github.com/googlefonts/fontc"
categories = ["parsing", "text-processing"]
keywords = ["fonts", "opentype"]
readme = "./README.md"
edition = "2021"
exclude = ["test-data"]

[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }
ansi_term = "0.12.1"
serde_json = {version = "1.0.87", optional = true }

diff = { workspace = true, optional = true }
norad = { workspace = true, optional = true } # Used in the compile binary
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
write-fonts.workspace = true
smol_str.workspace = true
chrono.workspace = true
indexmap.workspace = true
thiserror.workspace = true
ordered-float.workspace = true
log.workspace = true
env_logger.workspace = true

[features]
test = ["diff", "rayon", "serde", "serde_json", "clap"]
cli = ["norad", "clap"]

[dev-dependencies]
diff = "0.1.12"
rayon = "1.5"
criterion = "0.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[[bench]]
name = "parsing"
harness = false

[[bin]]
name = "fea-rs"
path = "src/bin/compile.rs"
required-features = ["cli"]

[[bin]]
name = "ttx_test"
required-features = ["test"]
