[package]
name = "fontbe"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A compiler for fonts."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }
fontir = { version = "0.0.1", path = "../fontir" }
fea-rs = { version = "0.18.0", path = "../fea-rs", features = ["serde"] }
tinystr = {version = "0.7.5", features = ["serde"] }

icu_properties.workspace = true
serde.workspace = true
bincode.workspace = true

thiserror.workspace = true
ordered-float.workspace = true
indexmap.workspace = true

log.workspace = true
env_logger.workspace = true

parking_lot.workspace = true

write-fonts.workspace = true

kurbo.workspace = true

smol_str.workspace = true

chrono.workspace = true

[dev-dependencies]
diff.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
more-asserts.workspace = true
temp-env.workspace = true
rstest.workspace = true
