[package]
name = "fontbe"
version = "0.2.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "the backend for fontc, a font compiler."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.2.1", path = "../fontdrasil" }
fontir = { version = "0.2.1", path = "../fontir" }
fea-rs = { version = "0.20.1", path = "../fea-rs", features = ["serde"] }
tinystr = {version = "0.8.0", features = ["serde"] }

icu_properties.workspace = true
serde.workspace = true
bincode.workspace = true

thiserror.workspace = true
ordered-float.workspace = true
indexmap.workspace = true

log.workspace = true
env_logger.workspace = true

write-fonts.workspace = true

kurbo.workspace = true

smol_str.workspace = true

chrono.workspace = true

[target.'cfg(not(platform_family = "wasm"))'.dependencies]
parking_lot.workspace = true
[target.'cfg(platform_family = "wasm")'.dependencies]
parking_lot = { version = "0.12.3", features=["nightly"] }

[dev-dependencies]
diff.workspace = true
tempfile.workspace = true
more-asserts.workspace = true
temp-env.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
otl-normalizer = { version = "0.0.1", path = "../otl-normalizer" }
