[package]
name = "fontc"
version = "0.0.1"
build = "build.rs"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A compiler for fonts."
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]
default-run = "fontc"


[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }
fontbe = { version = "0.0.1", path = "../fontbe" }
fontir = { version = "0.0.1", path = "../fontir" }
glyphs2fontir = { version = "0.0.1", path = "../glyphs2fontir" }
fontra2fontir = { version = "0.0.1", path = "../fontra2fontir" }
ufo2fontir = { version = "0.0.1", path = "../ufo2fontir" }

bitflags.workspace = true
bincode.workspace = true

serde.workspace = true
serde_yaml.workspace = true

filetime.workspace = true

log.workspace = true
env_logger.workspace = true
thiserror.workspace = true

indexmap.workspace = true
regex.workspace = true

write-fonts.workspace = true
clap.workspace = true
rayon.workspace = true

# just for fontc!
crossbeam-channel = "0.5.6"

[dev-dependencies]
diff.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
skrifa.workspace = true
kurbo.workspace = true
chrono.workspace = true

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "gitcl", "rustc"] }
