[package]
name = "fontc"
version = "0.3.0"
build = "build.rs"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A compiler for fonts."
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]
default-run = "fontc"

[[bin]]
name = "fontc"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
fontdrasil = { version = "0.2.1", path = "../fontdrasil" }
fontbe = { version = "0.2.1", path = "../fontbe" }
fontir = { version = "0.2.1", path = "../fontir" }
glyphs2fontir = { version = "0.2.1", path = "../glyphs2fontir" }
fontra2fontir = { version = "0.2.1", path = "../fontra2fontir" }
ufo2fontir = { version = "0.2.1", path = "../ufo2fontir" }

bitflags.workspace = true
bincode.workspace = true

serde.workspace = true
serde_yaml.workspace = true

filetime.workspace = true

log.workspace = true
env_logger.workspace = true
thiserror.workspace = true

indexmap.workspace = true
regex.workspace = true

write-fonts.workspace = true
rayon.workspace = true

# just for fontc!
crossbeam-channel = "0.5.6"

clap = { workspace = true, optional = true }

[dev-dependencies]
diff.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
skrifa.workspace = true
kurbo.workspace = true
chrono.workspace = true
ordered-float.workspace = true
rstest.workspace = true

[build-dependencies]
vergen-gitcl = { version = "1.0", features = ["build", "cargo", "rustc"] }

# Support for `cargo binstall fontc`.
# The default Github download URL template used by cargo-binstall doesn't work
# because our tag is named `fontc-v{version}` instead of just `v{version}`.
# https://github.com/cargo-bins/cargo-binstall/blob/main/SUPPORT.md
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
# Our binary archives contain just the `fontc` executable, no sub-folders
bin-dir = "{ bin }{ binary-ext }"
# We use .tar.gz for Linux/Mac binary archives, .zip for Windows
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"
