[package]
name = "fontc_crater"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A compiler for fonts."
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"

[dependencies]
fontc = { version = "0.3.0", path = "../fontc" }

google-fonts-sources = "0.9.0"
maud = "0.27.0"
tidier = "0.5.3"

chrono.workspace = true
rayon.workspace = true
write-fonts.workspace = true
serde.workspace = true
thiserror.workspace = true
clap.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tempfile.workspace = true
env_logger.workspace = true
log.workspace = true

