[package]
name = "fontdrasil"
version = "0.2.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Common types and utilites used by fontc, a font compiler."
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
ordered-float.workspace = true
smol_str.workspace = true
serde.workspace = true
write-fonts.workspace = true

[dev-dependencies]
diff.workspace = true
tempfile.workspace = true
