[package]
name = "fontir"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intermediate Representation for font compilation."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }

bitflags.workspace = true
serde.workspace = true
serde_yaml.workspace = true
bincode.workspace = true
filetime.workspace = true
thiserror.workspace = true

kurbo.workspace = true
ordered-float.workspace = true
indexmap.workspace = true

log.workspace = true
env_logger.workspace = true
parking_lot.workspace = true

write-fonts.workspace = true  # for pens

chrono.workspace = true
smol_str.workspace = true

# unique to me!
blake3 = "1.3.3"

[dev-dependencies]
diff.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
