[package]
name = "fontir"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intermediate Representation used by fontc, a font compiler."
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.1.0", path = "../fontdrasil" }

bitflags.workspace = true
serde.workspace = true
serde_yaml.workspace = true
bincode.workspace = true
filetime.workspace = true
thiserror.workspace = true

kurbo.workspace = true
ordered-float.workspace = true
indexmap.workspace = true

log.workspace = true
env_logger.workspace = true
parking_lot.workspace = true

write-fonts.workspace = true  # for pens

chrono.workspace = true
smol_str.workspace = true

[dev-dependencies]
diff.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
