[package]
name = "fontir"
version = "0.2.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Intermediate Representation used by fontc, a font compiler."
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.2.1", path = "../fontdrasil" }

bitflags.workspace = true
serde.workspace = true
serde_yaml.workspace = true
bincode.workspace = true
filetime.workspace = true
thiserror.workspace = true

kurbo.workspace = true
ordered-float.workspace = true
indexmap.workspace = true

log.workspace = true
env_logger.workspace = true

write-fonts.workspace = true  # for pens

chrono.workspace = true
smol_str.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
parking_lot.workspace = true
# From parking_lot README: "parking_lot will work mostly fine on stable...
# Just make sure not to enable -C target-feature=+atomics on stable as that
# will allow wasm to run with multiple threads." But we need multiple threads
# for rayon, and we need atomics too. Also from the README: "The
# wasm32-unknown-unknown target is only fully supported on nightly."
[target.'cfg(target_family="wasm")'.dependencies]
parking_lot = { version = "0.12.3", features = ["nightly"] }

[dev-dependencies]
diff.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
