[package]
name = "fontra2fontir"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Converts fontra.xyz/ files to font ir for compilation."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }
fontir = { version = "0.0.1", path = "../fontir" }

write-fonts.workspace = true

log.workspace = true
env_logger.workspace = true

thiserror.workspace = true

kurbo.workspace = true
ordered-float.workspace = true
indexmap.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
diff.workspace = true
ansi_term.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
