[package]
name = "glyphs-reader"
version = "0.3.0"
license = "MIT/Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
repository = "https://github.com/googlefonts/fontc"
description = "Parsing .glyphs source files"
edition = "2024"
categories = ["text-processing", "parsing", "graphics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_plist_derive = { version = "0.2.0", path = "ascii_plist_derive" }
fontdrasil = { version = "0.3.0", path = "../fontdrasil" }
quick-xml = "0.38"
ordered-float.workspace = true
kurbo.workspace = true
indexmap.workspace = true

thiserror.workspace = true
icu_properties.workspace = true

log.workspace = true
env_logger.workspace = true

regex.workspace = true

chrono.workspace = true
smol_str.workspace = true
serde.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
