[package]
name = "ir"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "IR for font compilation."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
font-types = { git = 'https://github.com/googlefonts/fontations' }
read-fonts = { git = 'https://github.com/googlefonts/fontations' }
bitflags = "1.3"
serde = {version = "1.0", features = ["derive"] }
toml = "0.5.9"
bincode = "1.3.3"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"

