[package]
name = "layout-normalizer"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
clap.workspace = true
thiserror.workspace = true
smol_str.workspace = true
read-fonts.workspace = true
indexmap.workspace = true

# cargo-release settings
[package.metadata.release]
release = false
