[package]
name = "layout-normalizer"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
fontdrasil = { version = "0.0.1", path = "../fontdrasil" }
clap.workspace = true
thiserror.workspace = true
smol_str.workspace = true
write-fonts.workspace = true
indexmap.workspace = true

[dev-dependencies]
fea-rs = { version = "0.18.0", path = "../fea-rs" }

# cargo-release settings
[package.metadata.release]
release = false
