[package]
name = "otl-normalizer"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "a normalized text representation of OpenType layout subtables"
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"


[dependencies]
fontdrasil = { version = "0.2.1", path = "../fontdrasil" }
clap.workspace = true
thiserror.workspace = true
smol_str.workspace = true
write-fonts.workspace = true
indexmap.workspace = true

[dev-dependencies]
fea-rs = { version = "0.20.1", path = "../fea-rs" }

