[package]
name = "otl-normalizer"
version = "0.2.0"
edition = "2024"
license = "MIT/Apache-2.0"
description = "a normalized text representation of OpenType layout subtables"
repository = "https://github.com/googlefonts/fontc"
readme = "README.md"


[dependencies]
fontdrasil = { version = "0.3.0", path = "../fontdrasil" }
clap.workspace = true
thiserror.workspace = true
smol_str.workspace = true
write-fonts.workspace = true
indexmap.workspace = true

[dev-dependencies]
fea-rs = { version = "0.21.0", path = "../fea-rs" }

# Support for `cargo binstall otl-normalizer`.
# The default Github download URL template used by cargo-binstall doesn't work
# because our tag is named `otl-normalizer-v{version}` instead of just `v{version}`.
# https://github.com/cargo-bins/cargo-binstall/blob/main/SUPPORT.md
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
# Our binary archives contain just the `otl-normalizer` executable, no sub-folders
bin-dir = "{ bin }{ binary-ext }"
# We use .tar.gz for Linux/Mac binary archives, .zip for Windows
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"

