[package]
name = "shape-brokkr"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A simple representation of a path, meant for use in fonts. Tools to find reusable parts in sets of shapes."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
thiserror = "1.0.37"

kurbo = "0.9.0"
ordered-float = "3.4.0"
serde = {version = "1.0", features = ["derive"] }

log = "0.4"
env_logger = "0.9.0"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
tempfile = "3.3.0"
