[package]
name = "ufo2fontir"
version = "0.0.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Converts UFO or UFO+designspace to font ir for compilation."
repository = "https://github.com/googlefonts/fontmake-rs"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
read-fonts = { git = 'https://github.com/googlefonts/fontations' }
fontir = { version = "0.0.1", path = "../fontir" }

# TODO use a version of norad with https://github.com/linebender/norad/pull/272 once one exists
# norad = "0.7.0"
norad = { git = 'https://github.com/linebender/norad' }

quick-xml = { version = "0.22.0", features = ["serialize"] }

log = "0.4"
env_logger = "0.9.0"

thiserror = "1.0.37"

plist = { version =  "1.3.1", features = ["serde"] }

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
tempfile = "3.3.0"
